--- a/index.html
+++ b/index.html
@@ -2,14 +2,24 @@
 <html>
 <body>
 <h2>Day 1 - Lanesboro to La Crosse</h2>
+<p>Elevation Gain: 1,215 ft</p>
+<p>Elevation Loss: 1,430 ft</p>
 <iframe src='https://connect.garmin.com/modern/course/embed/34756400' width='465' height='548' frameborder='0'></iframe>
 <h2>Day 2 - La Crosse to Dorchester</h2>
+<p>Elevation Gain: 1,451 ft</p>
+<p>Elevation Loss: 1,339 ft</p>
 <iframe src='https://connect.garmin.com/modern/course/embed/34757340' width='465' height='548' frameborder='0'></iframe>
 <h2>Day 3 - Dorchester to Decorah</h2>
+<p>Elevation Gain: 2,123 ft</p>
+<p>Elevation Loss: 2,007 ft</p>
 <iframe src='https://connect.garmin.com/modern/course/embed/34757794' width='465' height='548' frameborder='0'></iframe>
 <h2>Day 4 - Decorah to Kendallville</h2>
+<p>Elevation Gain: 3,171 ft</p>
+<p>Elevation Loss: 2,980 ft</p>
 <iframe src='https://connect.garmin.com/modern/course/embed/34759246' width='465' height='548' frameborder='0'></iframe>
 <h2>Day 5 - Kendallville to Lanesboro</h2>
+<p>Elevation Gain: 1,131 ft</p>
+<p>Elevation Loss: 1,377 ft</p>
 <iframe src='https://connect.garmin.com/modern/course/embed/34760214' width='465' height='548' frameborder='0'></iframe>
 </body>
 </html>
