--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <p>Elevation Gain: 2,123 ft</p>
 <p>Elevation Loss: 2,007 ft</p>
 <iframe src='https://connect.garmin.com/modern/course/embed/34757794' width='465' height='548' frameborder='0'></iframe>
-<h2>Day 4 - Decorah to Kendallville</h2>
-<p>Elevation Gain: 3,171 ft</p>
-<p>Elevation Loss: 2,980 ft</p>
-<iframe src='https://connect.garmin.com/modern/course/embed/34759246' width='465' height='548' frameborder='0'></iframe>
-<h2>Day 5 - Kendallville to Lanesboro</h2>
+<h2>Day 4 - Decorah to Harvest Farms</h2>
+<p>Elevation Gain: 1,900 ft</p>
+<p>Elevation Loss: 1,611 ft</p>
+<iframe src='https://connect.garmin.com/modern/course/embed/37082183' width='465' height='548' frameborder='0'></iframe>
+<h2>Day 5 - Harvest Farms to Lanesboro</h2>
 <p>Elevation Gain: 1,131 ft</p>
 <p>Elevation Loss: 1,377 ft</p>
-<iframe src='https://connect.garmin.com/modern/course/embed/34760214' width='465' height='548' frameborder='0'></iframe>
+<iframe src='https://connect.garmin.com/modern/course/embed/37082801' width='465' height='548' frameborder='0'></iframe>
 </body>
 </html>
